--- a/Assets/UI/CreateMenu.uxml
+++ b/Assets/UI/CreateMenu.uxml
@@ -3,7 +3,19 @@
     <ui:VisualElement name="Container" style="flex-grow: 1;">
         <ui:VisualElement name="Background" enabled="true" style="flex-grow: 0; width: 90%; height: 90%; border-top-width: 20px; border-right-width: 20px; border-bottom-width: 20px; border-left-width: 20px; border-left-color: rgb(0, 0, 0); border-right-color: rgb(0, 0, 0); border-top-color: rgb(0, 0, 0); border-bottom-color: rgb(0, 0, 0); flex-shrink: 0; margin-top: 0%; margin-right: 0%; margin-bottom: 0%; margin-left: 0%; position: relative; top: 5%; left: 5%; right: 5%; bottom: 5%;">
             <ui:Label text="&lt;Player Username&gt;" name="Name" style="-unity-text-align: upper-center; font-size: 100%;" />
-            <ui:VisualElement name="Settings" style="flex-grow: 1;" />
+            <ui:VisualElement name="Settings" style="flex-grow: 1;">
+                <ui:VisualElement name="MaxPlayers" style="flex-grow: 0; flex-direction: row; font-size: 100%; align-items: center; justify-content: space-around; align-self: stretch; flex-shrink: 0;">
+                    <ui:Label text="Max Players" class="SettingsText" style="-unity-text-align: middle-left;" />
+                    <ui:VisualElement name="Input" style="flex-grow: 1; flex-direction: row; justify-content: space-around; align-items: center; align-self: center;">
+                        <ui:Label text="6" name="Label" style="-unity-text-align: middle-left;" />
+                        <ui:VisualElement name="Buttons" style="flex-grow: 1; flex-direction: column; justify-content: space-around;">
+                            <ui:Button text="Up" name="UpButton" style="width: 20%;" />
+                            <ui:Button text="Down" name="DownButton" style="width: 20%;" />
+                        </ui:VisualElement>
+                    </ui:VisualElement>
+                </ui:VisualElement>
+                <ui:Toggle label="Private" name="Private" style="font-size: 100%;" />
+            </ui:VisualElement>
             <ui:VisualElement name="Buttons" style="flex-grow: 0; width: 100%; height: 10%; flex-shrink: 0; flex-direction: row; align-items: stretch; justify-content: space-between;">
                 <ui:Button text="Cancel" name="CancelButton" style="width: 10%;" />
                 <ui:Button text="Create" name="CreateButton" style="width: 10%;" />
